# meshcore-ha-chat

./: .gitignore  CHANGELOG.md  INSTRUCTIONS.md  LICENSE  README.md  as_built.md  hacs.json  info.md  pyproject.toml  requirements_test.txt
.github/workflows/: validate.yaml
custom_components/: __init__.py
custom_components/meshcore_chat/: __init__.py  channel_scopes.py  config_flow.py  const.py  diagnostics.py  manifest.json  meshcore-chat-panel.js  message_store.py  panel.py  quality_scale.yaml  repairs.py  strings.json  unread_tracking.py  utils.py  ws_api.py
custom_components/meshcore_chat/frontend/: package.json  rollup.config.mjs  tsconfig.json
custom_components/meshcore_chat/translations/: en.json
docs/brand/: README.md
frontend/: package-lock.json  package.json  rollup.config.mjs  tsconfig.json  vitest.config.ts
frontend/src/: api.ts  constants.ts  firmware-vocabulary.ts  meshcore-chat-panel.ts  styles.ts  types.ts
frontend/src/chat/: entity-resolver.ts  message-store.ts  unread-controller.ts
frontend/src/commands/: local-commands.ts  remote-commands.ts
frontend/src/components/: channel-dialog.ts  channel-info-dialog.ts  command-dialog.ts  confirm-dialog.ts  (+18 more)
frontend/tests/: channel-dialog-scope.test.ts  chat-page.test.ts  command-dialog-response-feed.test.ts  devices-page-execute-remote.test.ts  firmware-vocabulary.test.ts  message-bubble-xss.test.ts  message-rate-chart.test.ts  message-store.test.ts  node-summary-companion-hero.test.ts  panel-empty-state-copy.test.ts  sensor-thresholds.test.ts  unread-controller.test.ts
tests/: conftest.py
(+31 files in other folders)
